@@ -44,6 +44,7 @@ Features
      http://www.lavrsen.dk/foswiki/bin/view/Motion/FeatureRequest2010x04x14x082244 (Angel Carpintero)     
    * Added new log type COR , to filter messages from CORE. (Angel Carpintero)
    * Added a new starting option -m to disable motion detection. (Angel Carpintero)
+   * Allow image dimension not 4:3 changing a check of modulo 16 by modulo 8. (Jeroen Massar)
 
 Bugfixes
    * Avoid segfault detecting strerror_r() version GNU or SUSv3. (Angel Carpintero)
@@ -73,6 +74,8 @@ Bugfixes
    * Fixed motion.conf-dist , adding text according with config options.
    * Fixed a bug in post_capture. It was missed under certain conditions.
    * Fixed configure for SDL.
+   * Replace malloc() by calloc(). (Jeroen Massar)
+   * Free file descriptor buffers on exit.
 
 3.2.12 Summary of Changes
 
